Refactor: Eliminar la inyección de ExchangeMapper en UserMapper para solucionar dependencia circular; actualizar UserMapper para usar WearMapper en el mapeo de DTOs